crates/ruff_linter/src/rules/flake8_comprehensions/snapshots/ruff_linter__rules__flake8_comprehensions__tests__C406_C406.py.snap
---
source: crates/ruff_linter/src/rules/flake8_comprehensions/mod.rs
---
C406.py:1:6: C406 (unnecessary-literal-dict) [*] Unnecessary list literal (rewrite as a dict literal)
  |
1 | d1 = dict([(1, 2)])
  |      ^^^^^^^^^^^^^^ C406 (unnecessary-literal-dict)
2 | d2 = dict(((1, 2),))
3 | d3 = dict([])
  |
  = help: Rewrite as a dict literal

ℹ Unsafe fix
1   |-d1 = dict([(1, 2)])
  1 |+d1 = {1: 2}
2 2 | d2 = dict(((1, 2),))
3 3 | d3 = dict([])
4 4 | d4 = dict(())

C406.py:2:6: C406 (unnecessary-literal-dict) [*] Unnecessary tuple literal (rewrite as a dict literal)
  |
1 | d1 = dict([(1, 2)])
2 | d2 = dict(((1, 2),))
  |      ^^^^^^^^^^^^^^^ C406 (unnecessary-literal-dict)
3 | d3 = dict([])
4 | d4 = dict(())
  |
  = help: Rewrite as a dict literal

ℹ Unsafe fix
1 1 | d1 = dict([(1, 2)])
2   |-d2 = dict(((1, 2),))
  2 |+d2 = {1: 2,}
3 3 | d3 = dict([])
4 4 | d4 = dict(())
5 5 | d5 = dict()

C406.py:3:6: C406 (unnecessary-literal-dict) [*] Unnecessary list literal (rewrite as a dict literal)
  |
1 | d1 = dict([(1, 2)])
2 | d2 = dict(((1, 2),))
3 | d3 = dict([])
  |      ^^^^^^^^ C406 (unnecessary-literal-dict)
4 | d4 = dict(())
5 | d5 = dict()
  |
  = help: Rewrite as a dict literal

ℹ Unsafe fix
1 1 | d1 = dict([(1, 2)])
2 2 | d2 = dict(((1, 2),))
3   |-d3 = dict([])
  3 |+d3 = {}
4 4 | d4 = dict(())
5 5 | d5 = dict()

C406.py:4:6: C406 (unnecessary-literal-dict) [*] Unnecessary tuple literal (rewrite as a dict literal)
  |
2 | d2 = dict(((1, 2),))
3 | d3 = dict([])
4 | d4 = dict(())
  |      ^^^^^^^^ C406 (unnecessary-literal-dict)
5 | d5 = dict()
  |
  = help: Rewrite as a dict literal

ℹ Unsafe fix
1 1 | d1 = dict([(1, 2)])
2 2 | d2 = dict(((1, 2),))
3 3 | d3 = dict([])
4   |-d4 = dict(())
  4 |+d4 = {}
5 5 | d5 = dict()
