crates/ruff_linter/src/rules/flake8_comprehensions/snapshots/ruff_linter__rules__flake8_comprehensions__tests__C408_C408.py.snap
---
source: crates/ruff_linter/src/rules/flake8_comprehensions/mod.rs
---
C408.py:1:5: C408 (unnecessary-collection-call) [*] Unnecessary `tuple()` call (rewrite as a literal)
  |
1 | t = tuple()
  |     ^^^^^^^ C408 (unnecessary-collection-call)
2 | l = list()
3 | d1 = dict()
  |
  = help: Rewrite as a literal

ℹ Unsafe fix
1   |-t = tuple()
  1 |+t = ()
2 2 | l = list()
3 3 | d1 = dict()
4 4 | d2 = dict(a=1)

C408.py:2:5: C408 (unnecessary-collection-call) [*] Unnecessary `list()` call (rewrite as a literal)
  |
1 | t = tuple()
2 | l = list()
  |     ^^^^^^ C408 (unnecessary-collection-call)
3 | d1 = dict()
4 | d2 = dict(a=1)
  |
  = help: Rewrite as a literal

ℹ Unsafe fix
1 1 | t = tuple()
2   |-l = list()
  2 |+l = []
3 3 | d1 = dict()
4 4 | d2 = dict(a=1)
5 5 | d3 = dict(**d2)

C408.py:3:6: C408 (unnecessary-collection-call) [*] Unnecessary `dict()` call (rewrite as a literal)
  |
1 | t = tuple()
2 | l = list()
3 | d1 = dict()
  |      ^^^^^^ C408 (unnecessary-collection-call)
4 | d2 = dict(a=1)
5 | d3 = dict(**d2)
  |
  = help: Rewrite as a literal

ℹ Unsafe fix
1 1 | t = tuple()
2 2 | l = list()
3   |-d1 = dict()
  3 |+d1 = {}
4 4 | d2 = dict(a=1)
5 5 | d3 = dict(**d2)
6 6 | 

C408.py:4:6: C408 (unnecessary-collection-call) [*] Unnecessary `dict()` call (rewrite as a literal)
  |
2 | l = list()
3 | d1 = dict()
4 | d2 = dict(a=1)
  |      ^^^^^^^^^ C408 (unnecessary-collection-call)
5 | d3 = dict(**d2)
  |
  = help: Rewrite as a literal

ℹ Unsafe fix
1 1 | t = tuple()
2 2 | l = list()
3 3 | d1 = dict()
4   |-d2 = dict(a=1)
  4 |+d2 = {"a": 1}
5 5 | d3 = dict(**d2)
6 6 | 
7 7 | 

C408.py:14:4: C408 (unnecessary-collection-call) [*] Unnecessary `dict()` call (rewrite as a literal)
   |
12 | a = list()
13 |
14 | f"{dict(x='y')}"
   |    ^^^^^^^^^^^ C408 (unnecessary-collection-call)
15 | f'{dict(x="y")}'
16 | f"{dict()}"
   |
   = help: Rewrite as a literal

ℹ Unsafe fix
11 11 | 
12 12 | a = list()
13 13 | 
14    |-f"{dict(x='y')}"
   14 |+f"{ {'x': 'y'} }"
15 15 | f'{dict(x="y")}'
16 16 | f"{dict()}"
17 17 | f"a {dict()} b"

C408.py:15:4: C408 (unnecessary-collection-call) [*] Unnecessary `dict()` call (rewrite as a literal)
   |
14 | f"{dict(x='y')}"
15 | f'{dict(x="y")}'
   |    ^^^^^^^^^^^ C408 (unnecessary-collection-call)
16 | f"{dict()}"
17 | f"a {dict()} b"
   |
   = help: Rewrite as a literal

ℹ Unsafe fix
12 12 | a = list()
13 13 | 
14 14 | f"{dict(x='y')}"
15    |-f'{dict(x="y")}'
   15 |+f'{ {"x": "y"} }'
16 16 | f"{dict()}"
17 17 | f"a {dict()} b"
18 18 | 

C408.py:16:4: C408 (unnecessary-collection-call) [*] Unnecessary `dict()` call (rewrite as a literal)
   |
14 | f"{dict(x='y')}"
15 | f'{dict(x="y")}'
16 | f"{dict()}"
   |    ^^^^^^ C408 (unnecessary-collection-call)
17 | f"a {dict()} b"
   |
   = help: Rewrite as a literal

ℹ Unsafe fix
13 13 | 
14 14 | f"{dict(x='y')}"
15 15 | f'{dict(x="y")}'
16    |-f"{dict()}"
   16 |+f"{ {} }"
17 17 | f"a {dict()} b"
18 18 | 
19 19 | f"{dict(x='y') | dict(y='z')}"

C408.py:17:6: C408 (unnecessary-collection-call) [*] Unnecessary `dict()` call (rewrite as a literal)
   |
15 | f'{dict(x="y")}'
16 | f"{dict()}"
17 | f"a {dict()} b"
   |      ^^^^^^ C408 (unnecessary-collection-call)
18 |
19 | f"{dict(x='y') | dict(y='z')}"
   |
   = help: Rewrite as a literal

ℹ Unsafe fix
14 14 | f"{dict(x='y')}"
15 15 | f'{dict(x="y")}'
16 16 | f"{dict()}"
17    |-f"a {dict()} b"
   17 |+f"a { {} } b"
18 18 | 
19 19 | f"{dict(x='y') | dict(y='z')}"
20 20 | f"{ dict(x='y') | dict(y='z') }"

C408.py:19:4: C408 (unnecessary-collection-call) [*] Unnecessary `dict()` call (rewrite as a literal)
   |
17 | f"a {dict()} b"
18 |
19 | f"{dict(x='y') | dict(y='z')}"
   |    ^^^^^^^^^^^ C408 (unnecessary-collection-call)
20 | f"{ dict(x='y') | dict(y='z') }"
21 | f"a {dict(x='y') | dict(y='z')} b"
   |
   = help: Rewrite as a literal

ℹ Unsafe fix
16 16 | f"{dict()}"
17 17 | f"a {dict()} b"
18 18 | 
19    |-f"{dict(x='y') | dict(y='z')}"
   19 |+f"{ {'x': 'y'} | dict(y='z')}"
20 20 | f"{ dict(x='y') | dict(y='z') }"
21 21 | f"a {dict(x='y') | dict(y='z')} b"
22 22 | f"a { dict(x='y') | dict(y='z') } b"

C408.py:19:18: C408 (unnecessary-collection-call) [*] Unnecessary `dict()` call (rewrite as a literal)
   |
17 | f"a {dict()} b"
18 |
19 | f"{dict(x='y') | dict(y='z')}"
   |                  ^^^^^^^^^^^ C408 (unnecessary-collection-call)
20 | f"{ dict(x='y') | dict(y='z') }"
21 | f"a {dict(x='y') | dict(y='z')} b"
   |
   = help: Rewrite as a literal

ℹ Unsafe fix
16 16 | f"{dict()}"
17 17 | f"a {dict()} b"
18 18 | 
19    |-f"{dict(x='y') | dict(y='z')}"
   19 |+f"{dict(x='y') | {'y': 'z'} }"
20 20 | f"{ dict(x='y') | dict(y='z') }"
21 21 | f"a {dict(x='y') | dict(y='z')} b"
22 22 | f"a { dict(x='y') | dict(y='z') } b"

C408.py:20:5: C408 (unnecessary-collection-call) [*] Unnecessary `dict()` call (rewrite as a literal)
   |
19 | f"{dict(x='y') | dict(y='z')}"
20 | f"{ dict(x='y') | dict(y='z') }"
   |     ^^^^^^^^^^^ C408 (unnecessary-collection-call)
21 | f"a {dict(x='y') | dict(y='z')} b"
22 | f"a { dict(x='y') | dict(y='z') } b"
   |
   = help: Rewrite as a literal

ℹ Unsafe fix
17 17 | f"a {dict()} b"
18 18 | 
19 19 | f"{dict(x='y') | dict(y='z')}"
20    |-f"{ dict(x='y') | dict(y='z') }"
   20 |+f"{ {'x': 'y'} | dict(y='z') }"
21 21 | f"a {dict(x='y') | dict(y='z')} b"
22 22 | f"a { dict(x='y') | dict(y='z') } b"
23 23 | 

C408.py:20:19: C408 (unnecessary-collection-call) [*] Unnecessary `dict()` call (rewrite as a literal)
   |
19 | f"{dict(x='y') | dict(y='z')}"
20 | f"{ dict(x='y') | dict(y='z') }"
   |                   ^^^^^^^^^^^ C408 (unnecessary-collection-call)
21 | f"a {dict(x='y') | dict(y='z')} b"
22 | f"a { dict(x='y') | dict(y='z') } b"
   |
   = help: Rewrite as a literal

ℹ Unsafe fix
17 17 | f"a {dict()} b"
18 18 | 
19 19 | f"{dict(x='y') | dict(y='z')}"
20    |-f"{ dict(x='y') | dict(y='z') }"
   20 |+f"{ dict(x='y') | {'y': 'z'} }"
21 21 | f"a {dict(x='y') | dict(y='z')} b"
22 22 | f"a { dict(x='y') | dict(y='z') } b"
23 23 | 

C408.py:21:6: C408 (unnecessary-collection-call) [*] Unnecessary `dict()` call (rewrite as a literal)
   |
19 | f"{dict(x='y') | dict(y='z')}"
20 | f"{ dict(x='y') | dict(y='z') }"
21 | f"a {dict(x='y') | dict(y='z')} b"
   |      ^^^^^^^^^^^ C408 (unnecessary-collection-call)
22 | f"a { dict(x='y') | dict(y='z') } b"
   |
   = help: Rewrite as a literal

ℹ Unsafe fix
18 18 | 
19 19 | f"{dict(x='y') | dict(y='z')}"
20 20 | f"{ dict(x='y') | dict(y='z') }"
21    |-f"a {dict(x='y') | dict(y='z')} b"
   21 |+f"a { {'x': 'y'} | dict(y='z')} b"
22 22 | f"a { dict(x='y') | dict(y='z') } b"
23 23 | 
24 24 | dict(

C408.py:21:20: C408 (unnecessary-collection-call) [*] Unnecessary `dict()` call (rewrite as a literal)
   |
19 | f"{dict(x='y') | dict(y='z')}"
20 | f"{ dict(x='y') | dict(y='z') }"
21 | f"a {dict(x='y') | dict(y='z')} b"
   |                    ^^^^^^^^^^^ C408 (unnecessary-collection-call)
22 | f"a { dict(x='y') | dict(y='z') } b"
   |
   = help: Rewrite as a literal

ℹ Unsafe fix
18 18 | 
19 19 | f"{dict(x='y') | dict(y='z')}"
20 20 | f"{ dict(x='y') | dict(y='z') }"
21    |-f"a {dict(x='y') | dict(y='z')} b"
   21 |+f"a {dict(x='y') | {'y': 'z'} } b"
22 22 | f"a { dict(x='y') | dict(y='z') } b"
23 23 | 
24 24 | dict(

C408.py:22:7: C408 (unnecessary-collection-call) [*] Unnecessary `dict()` call (rewrite as a literal)
   |
20 | f"{ dict(x='y') | dict(y='z') }"
21 | f"a {dict(x='y') | dict(y='z')} b"
22 | f"a { dict(x='y') | dict(y='z') } b"
   |       ^^^^^^^^^^^ C408 (unnecessary-collection-call)
23 |
24 | dict(
   |
   = help: Rewrite as a literal

ℹ Unsafe fix
19 19 | f"{dict(x='y') | dict(y='z')}"
20 20 | f"{ dict(x='y') | dict(y='z') }"
21 21 | f"a {dict(x='y') | dict(y='z')} b"
22    |-f"a { dict(x='y') | dict(y='z') } b"
   22 |+f"a { {'x': 'y'} | dict(y='z') } b"
23 23 | 
24 24 | dict(
25 25 |     # comment

C408.py:22:21: C408 (unnecessary-collection-call) [*] Unnecessary `dict()` call (rewrite as a literal)
   |
20 | f"{ dict(x='y') | dict(y='z') }"
21 | f"a {dict(x='y') | dict(y='z')} b"
22 | f"a { dict(x='y') | dict(y='z') } b"
   |                     ^^^^^^^^^^^ C408 (unnecessary-collection-call)
23 |
24 | dict(
   |
   = help: Rewrite as a literal

ℹ Unsafe fix
19 19 | f"{dict(x='y') | dict(y='z')}"
20 20 | f"{ dict(x='y') | dict(y='z') }"
21 21 | f"a {dict(x='y') | dict(y='z')} b"
22    |-f"a { dict(x='y') | dict(y='z') } b"
   22 |+f"a { dict(x='y') | {'y': 'z'} } b"
23 23 | 
24 24 | dict(
25 25 |     # comment

C408.py:24:1: C408 (unnecessary-collection-call) [*] Unnecessary `dict()` call (rewrite as a literal)
   |
22 |   f"a { dict(x='y') | dict(y='z') } b"
23 |
24 | / dict(
25 | |     # comment
26 | | )
   | |_^ C408 (unnecessary-collection-call)
27 |
28 |   tuple(  # comment
   |
   = help: Rewrite as a literal

ℹ Unsafe fix
21 21 | f"a {dict(x='y') | dict(y='z')} b"
22 22 | f"a { dict(x='y') | dict(y='z') } b"
23 23 | 
24    |-dict(
   24 |+{
25 25 |     # comment
26    |-)
   26 |+}
27 27 | 
28 28 | tuple(  # comment
29 29 | )

C408.py:28:1: C408 (unnecessary-collection-call) [*] Unnecessary `tuple()` call (rewrite as a literal)
   |
26 |   )
27 |
28 | / tuple(  # comment
29 | | )
   | |_^ C408 (unnecessary-collection-call)
30 |
31 |   t"{dict(x='y')}"
   |
   = help: Rewrite as a literal

ℹ Unsafe fix
25 25 |     # comment
26 26 | )
27 27 | 
28    |-tuple(  # comment
   28 |+(  # comment
29 29 | )
30 30 | 
31 31 | t"{dict(x='y')}"

C408.py:31:4: C408 (unnecessary-collection-call) [*] Unnecessary `dict()` call (rewrite as a literal)
   |
29 | )
30 |
31 | t"{dict(x='y')}"
   |    ^^^^^^^^^^^ C408 (unnecessary-collection-call)
32 | t'{dict(x="y")}'
33 | t"{dict()}"
   |
   = help: Rewrite as a literal

ℹ Unsafe fix
28 28 | tuple(  # comment
29 29 | )
30 30 | 
31    |-t"{dict(x='y')}"
   31 |+t"{ {'x': 'y'} }"
32 32 | t'{dict(x="y")}'
33 33 | t"{dict()}"
34 34 | t"a {dict()} b"

C408.py:32:4: C408 (unnecessary-collection-call) [*] Unnecessary `dict()` call (rewrite as a literal)
   |
31 | t"{dict(x='y')}"
32 | t'{dict(x="y")}'
   |    ^^^^^^^^^^^ C408 (unnecessary-collection-call)
33 | t"{dict()}"
34 | t"a {dict()} b"
   |
   = help: Rewrite as a literal

ℹ Unsafe fix
29 29 | )
30 30 | 
31 31 | t"{dict(x='y')}"
32    |-t'{dict(x="y")}'
   32 |+t'{ {"x": "y"} }'
33 33 | t"{dict()}"
34 34 | t"a {dict()} b"
35 35 | 

C408.py:33:4: C408 (unnecessary-collection-call) [*] Unnecessary `dict()` call (rewrite as a literal)
   |
31 | t"{dict(x='y')}"
32 | t'{dict(x="y")}'
33 | t"{dict()}"
   |    ^^^^^^ C408 (unnecessary-collection-call)
34 | t"a {dict()} b"
   |
   = help: Rewrite as a literal

ℹ Unsafe fix
30 30 | 
31 31 | t"{dict(x='y')}"
32 32 | t'{dict(x="y")}'
33    |-t"{dict()}"
   33 |+t"{ {} }"
34 34 | t"a {dict()} b"
35 35 | 
36 36 | t"{dict(x='y') | dict(y='z')}"

C408.py:34:6: C408 (unnecessary-collection-call) [*] Unnecessary `dict()` call (rewrite as a literal)
   |
32 | t'{dict(x="y")}'
33 | t"{dict()}"
34 | t"a {dict()} b"
   |      ^^^^^^ C408 (unnecessary-collection-call)
35 |
36 | t"{dict(x='y') | dict(y='z')}"
   |
   = help: Rewrite as a literal

ℹ Unsafe fix
31 31 | t"{dict(x='y')}"
32 32 | t'{dict(x="y")}'
33 33 | t"{dict()}"
34    |-t"a {dict()} b"
   34 |+t"a { {} } b"
35 35 | 
36 36 | t"{dict(x='y') | dict(y='z')}"
37 37 | t"{ dict(x='y') | dict(y='z') }"

C408.py:36:4: C408 (unnecessary-collection-call) [*] Unnecessary `dict()` call (rewrite as a literal)
   |
34 | t"a {dict()} b"
35 |
36 | t"{dict(x='y') | dict(y='z')}"
   |    ^^^^^^^^^^^ C408 (unnecessary-collection-call)
37 | t"{ dict(x='y') | dict(y='z') }"
38 | t"a {dict(x='y') | dict(y='z')} b"
   |
   = help: Rewrite as a literal

ℹ Unsafe fix
33 33 | t"{dict()}"
34 34 | t"a {dict()} b"
35 35 | 
36    |-t"{dict(x='y') | dict(y='z')}"
   36 |+t"{ {'x': 'y'} | dict(y='z')}"
37 37 | t"{ dict(x='y') | dict(y='z') }"
38 38 | t"a {dict(x='y') | dict(y='z')} b"
39 39 | t"a { dict(x='y') | dict(y='z') } b"

C408.py:36:18: C408 (unnecessary-collection-call) [*] Unnecessary `dict()` call (rewrite as a literal)
   |
34 | t"a {dict()} b"
35 |
36 | t"{dict(x='y') | dict(y='z')}"
   |                  ^^^^^^^^^^^ C408 (unnecessary-collection-call)
37 | t"{ dict(x='y') | dict(y='z') }"
38 | t"a {dict(x='y') | dict(y='z')} b"
   |
   = help: Rewrite as a literal

ℹ Unsafe fix
33 33 | t"{dict()}"
34 34 | t"a {dict()} b"
35 35 | 
36    |-t"{dict(x='y') | dict(y='z')}"
   36 |+t"{dict(x='y') | {'y': 'z'} }"
37 37 | t"{ dict(x='y') | dict(y='z') }"
38 38 | t"a {dict(x='y') | dict(y='z')} b"
39 39 | t"a { dict(x='y') | dict(y='z') } b"

C408.py:37:5: C408 (unnecessary-collection-call) [*] Unnecessary `dict()` call (rewrite as a literal)
   |
36 | t"{dict(x='y') | dict(y='z')}"
37 | t"{ dict(x='y') | dict(y='z') }"
   |     ^^^^^^^^^^^ C408 (unnecessary-collection-call)
38 | t"a {dict(x='y') | dict(y='z')} b"
39 | t"a { dict(x='y') | dict(y='z') } b"
   |
   = help: Rewrite as a literal

ℹ Unsafe fix
34 34 | t"a {dict()} b"
35 35 | 
36 36 | t"{dict(x='y') | dict(y='z')}"
37    |-t"{ dict(x='y') | dict(y='z') }"
   37 |+t"{ {'x': 'y'} | dict(y='z') }"
38 38 | t"a {dict(x='y') | dict(y='z')} b"
39 39 | t"a { dict(x='y') | dict(y='z') } b"

C408.py:37:19: C408 (unnecessary-collection-call) [*] Unnecessary `dict()` call (rewrite as a literal)
   |
36 | t"{dict(x='y') | dict(y='z')}"
37 | t"{ dict(x='y') | dict(y='z') }"
   |                   ^^^^^^^^^^^ C408 (unnecessary-collection-call)
38 | t"a {dict(x='y') | dict(y='z')} b"
39 | t"a { dict(x='y') | dict(y='z') } b"
   |
   = help: Rewrite as a literal

ℹ Unsafe fix
34 34 | t"a {dict()} b"
35 35 | 
36 36 | t"{dict(x='y') | dict(y='z')}"
37    |-t"{ dict(x='y') | dict(y='z') }"
   37 |+t"{ dict(x='y') | {'y': 'z'} }"
38 38 | t"a {dict(x='y') | dict(y='z')} b"
39 39 | t"a { dict(x='y') | dict(y='z') } b"

C408.py:38:6: C408 (unnecessary-collection-call) [*] Unnecessary `dict()` call (rewrite as a literal)
   |
36 | t"{dict(x='y') | dict(y='z')}"
37 | t"{ dict(x='y') | dict(y='z') }"
38 | t"a {dict(x='y') | dict(y='z')} b"
   |      ^^^^^^^^^^^ C408 (unnecessary-collection-call)
39 | t"a { dict(x='y') | dict(y='z') } b"
   |
   = help: Rewrite as a literal

ℹ Unsafe fix
35 35 | 
36 36 | t"{dict(x='y') | dict(y='z')}"
37 37 | t"{ dict(x='y') | dict(y='z') }"
38    |-t"a {dict(x='y') | dict(y='z')} b"
   38 |+t"a { {'x': 'y'} | dict(y='z')} b"
39 39 | t"a { dict(x='y') | dict(y='z') } b"

C408.py:38:20: C408 (unnecessary-collection-call) [*] Unnecessary `dict()` call (rewrite as a literal)
   |
36 | t"{dict(x='y') | dict(y='z')}"
37 | t"{ dict(x='y') | dict(y='z') }"
38 | t"a {dict(x='y') | dict(y='z')} b"
   |                    ^^^^^^^^^^^ C408 (unnecessary-collection-call)
39 | t"a { dict(x='y') | dict(y='z') } b"
   |
   = help: Rewrite as a literal

ℹ Unsafe fix
35 35 | 
36 36 | t"{dict(x='y') | dict(y='z')}"
37 37 | t"{ dict(x='y') | dict(y='z') }"
38    |-t"a {dict(x='y') | dict(y='z')} b"
   38 |+t"a {dict(x='y') | {'y': 'z'} } b"
39 39 | t"a { dict(x='y') | dict(y='z') } b"

C408.py:39:7: C408 (unnecessary-collection-call) [*] Unnecessary `dict()` call (rewrite as a literal)
   |
37 | t"{ dict(x='y') | dict(y='z') }"
38 | t"a {dict(x='y') | dict(y='z')} b"
39 | t"a { dict(x='y') | dict(y='z') } b"
   |       ^^^^^^^^^^^ C408 (unnecessary-collection-call)
   |
   = help: Rewrite as a literal

ℹ Unsafe fix
36 36 | t"{dict(x='y') | dict(y='z')}"
37 37 | t"{ dict(x='y') | dict(y='z') }"
38 38 | t"a {dict(x='y') | dict(y='z')} b"
39    |-t"a { dict(x='y') | dict(y='z') } b"
   39 |+t"a { {'x': 'y'} | dict(y='z') } b"

C408.py:39:21: C408 (unnecessary-collection-call) [*] Unnecessary `dict()` call (rewrite as a literal)
   |
37 | t"{ dict(x='y') | dict(y='z') }"
38 | t"a {dict(x='y') | dict(y='z')} b"
39 | t"a { dict(x='y') | dict(y='z') } b"
   |                     ^^^^^^^^^^^ C408 (unnecessary-collection-call)
   |
   = help: Rewrite as a literal

ℹ Unsafe fix
36 36 | t"{dict(x='y') | dict(y='z')}"
37 37 | t"{ dict(x='y') | dict(y='z') }"
38 38 | t"a {dict(x='y') | dict(y='z')} b"
39    |-t"a { dict(x='y') | dict(y='z') } b"
   39 |+t"a { dict(x='y') | {'y': 'z'} } b"
