crates/ruff_linter/src/rules/flake8_comprehensions/snapshots/ruff_linter__rules__flake8_comprehensions__tests__C411_C411.py.snap
---
source: crates/ruff_linter/src/rules/flake8_comprehensions/mod.rs
---
C411.py:2:1: C411 (unnecessary-list-call) [*] Unnecessary `list()` call (remove the outer call to `list()`)
  |
1 | x = [1, 2, 3]
2 | list([i for i in x])
  | ^^^^^^^^^^^^^^^^^^^^ C411 (unnecessary-list-call)
3 |
4 | # Skip when too many positional arguments
  |
  = help: Remove outer `list()` call

ℹ Unsafe fix
1 1 | x = [1, 2, 3]
2   |-list([i for i in x])
  2 |+[i for i in x]
3 3 | 
4 4 | # Skip when too many positional arguments
5 5 | # or keyword argument present.
